added all files

--- a/LICENSE.html
+++ b/LICENSE.html
@@ -13,8 +13,8 @@
 
 <title>LICENSE</title>
 
-<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
-<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
+<script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
+<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
@@ -242,16 +242,16 @@ $(document).ready(function () {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="slides.html">Slides &amp; Reading</a>
+  <a href="slides.html">Header 1</a>
 </li>
 <li>
-  <a href="https://www.youtube.com/channel/UC5Deez8jUMnLhcf72-cHA7Q">YouTube</a>
+  <a href="https://www.youtube.com/channel/UC5Deez8jUMnLhcf72-cHA7Q">Header 2</a>
 </li>
 <li>
-  <a href="scripts.html">Scripts</a>
+  <a href="scripts.html">Header 3</a>
 </li>
 <li>
-  <a href="plan_overview.pdf">Video Map</a>
+  <a href="plan_overview.pdf">Header 4</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
