--- a/slides.html
+++ b/slides.html
@@ -13,8 +13,8 @@
 
 <title>GI Canced Education Slides</title>
 
-<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
-<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
+<script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
+<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
@@ -242,16 +242,16 @@ $(document).ready(function () {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="slides.html">Slides &amp; Reading</a>
+  <a href="slides.html">Header 1</a>
 </li>
 <li>
-  <a href="https://www.youtube.com/channel/UC5Deez8jUMnLhcf72-cHA7Q">YouTube</a>
+  <a href="https://www.youtube.com/channel/UC5Deez8jUMnLhcf72-cHA7Q">Header 2</a>
 </li>
 <li>
-  <a href="scripts.html">Scripts</a>
+  <a href="scripts.html">Header 3</a>
 </li>
 <li>
-  <a href="plan_overview.pdf">Video Map</a>
+  <a href="plan_overview.pdf">Header 4</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -278,37 +278,37 @@ $(document).ready(function () {
 <h2 class="tabset">Esophageal Cancer</h2>
 <div id="diagnosisstaging" class="section level3">
 <h3>Diagnosis/Staging</h3>
-<iframe src="slides/02-Eso_Dx_Staging.html" width="672" height="400px" data-external="1">
+<iframe src="slides/02-Eso_Dx_Staging.html" width="672" height="400px">
 </iframe>
 </div>
 <div id="treatment-options" class="section level3">
 <h3>Treatment Options</h3>
-<iframe src="slides/04-Eso_Rx_Options.html" width="672" height="400px" data-external="1">
+<iframe src="slides/04-Eso_Rx_Options.html" width="672" height="400px">
 </iframe>
 </div>
 <div id="early-stage-disease" class="section level3">
 <h3>Early Stage Disease</h3>
-<iframe src="slides/06-Eso_Early.html" width="672" height="400px" data-external="1">
+<iframe src="slides/06-Eso_Early.html" width="672" height="400px">
 </iframe>
 </div>
 <div id="advanced-stage-disease" class="section level3">
 <h3>Advanced Stage Disease</h3>
-<iframe src="slides/08-Eso_Advanced.html" width="672" height="400px" data-external="1">
+<iframe src="slides/08-Eso_Advanced.html" width="672" height="400px">
 </iframe>
 </div>
 <div id="locally-advanced" class="section level3">
 <h3>Locally Advanced</h3>
-<iframe src="slides/14-Eso_Locally_Advanced.html" width="672" height="400px" data-external="1">
+<iframe src="slides/14-Eso_Locally_Advanced.html" width="672" height="400px">
 </iframe>
 </div>
 <div id="metastatic-disease" class="section level3">
 <h3>Metastatic Disease</h3>
-<iframe src="slides/16-Eso_Metastatic.html" width="672" height="400px" data-external="1">
+<iframe src="slides/16-Eso_Metastatic.html" width="672" height="400px">
 </iframe>
 </div>
 <div id="metastatic-disease-1" class="section level3">
 <h3>Metastatic Disease</h3>
-<iframe src="slides/16-Eso_Metastatic.html" width="672" height="400px" data-external="1">
+<iframe src="slides/16-Eso_Metastatic.html" width="672" height="400px">
 </iframe>
 </div>
 </div>
@@ -316,12 +316,12 @@ $(document).ready(function () {
 <h2 class="tabset">Surgery</h2>
 <div id="esophagectomy" class="section level3">
 <h3>Esophagectomy</h3>
-<iframe src="slides/12-Eso_Surgery.html" width="672" height="400px" data-external="1">
+<iframe src="slides/12-Eso_Surgery.html" width="672" height="400px">
 </iframe>
 </div>
 <div id="choosing-a-surgeon" class="section level3">
 <h3>Choosing a Surgeon</h3>
-<iframe src="slides/32-Surgeon.html" width="672" height="400px" data-external="1">
+<iframe src="slides/32-Surgeon.html" width="672" height="400px">
 </iframe>
 </div>
 </div>
@@ -329,22 +329,22 @@ $(document).ready(function () {
 <h2 class="tabset">Supportive</h2>
 <div id="nutrition" class="section level3">
 <h3>Nutrition</h3>
-<iframe src="slides/22-NutritionEsoCa.html" width="672" height="400px" data-external="1">
+<iframe src="slides/22-NutritionEsoCa.html" width="672" height="400px">
 </iframe>
 </div>
 <div id="gastrostomy-tube" class="section level3">
 <h3>Gastrostomy Tube</h3>
-<iframe src="slides/24-gastrostomy.html" width="672" height="400px" data-external="1">
+<iframe src="slides/24-gastrostomy.html" width="672" height="400px">
 </iframe>
 </div>
 <div id="central-venous-port" class="section level3">
 <h3>Central Venous Port</h3>
-<iframe src="slides/26-Port.html" width="672" height="400px" data-external="1">
+<iframe src="slides/26-Port.html" width="672" height="400px">
 </iframe>
 </div>
 <div id="exercise" class="section level3">
 <h3>Exercise</h3>
-<iframe src="slides/34-Exercise.html" width="672" height="400px" data-external="1">
+<iframe src="slides/34-Exercise.html" width="672" height="400px">
 </iframe>
 </div>
 </div>
